Alpha 0.1.6
- New animation algorithms! Prettier, much less error-prone, smaller, and ~30% faster!
- Added support for custom sounds via a resource pack. Thank you @Achaius for all your help with this!
- Added config options for resource pack loading.
- Speed variable (now time) in the API now describes amount of time (measured in seconds) it will take to open a door of any type. 
- Now using variable tickrate based on door speed and size! Faster = higher tickrate, slower = lower tickrate. 
- Fixed materials such as andesite turning into stone in < 1.12. (again... Thank you, 1.13).
- Added "/bdversion" command to display the version of this plugin.
- Double steps no longer allowed for now, as they bug out everything.
- Added support for using "/ListDoors <DoorName || PlayerName || PlayerUUID>" from console.
- Added support for using "/DoorInfo <DoorUID>" from console.
- Fixed NPE thrown when using changepowerblockloc using a name that has more than 1 or 0 result(s).

Alpha 0.1.5.4
- Fixed GUI in 1.13.x, thank you @Achaius for the bug report!
- Improved timings for smaller doors.
- Fixed getting door info from GUI.
- Fixed /BDCancel when creating portcullis or relocation power block.

Alpha 0.1.5.3
- Fixed drawbridges removing all blocks instead of putting them in the final location after opening.

Alpha 0.1.5.2 (REMOVED)
- Improved support for blocks introduced in version 1.13 of Minecraft. Thanks @Ashleyekm for the bug report and @Hex_27 for his XMaterial class, making my life a bit easier :D.
- Added optional "-p" flag to the "/NewDoor" command, to make a portcullis instead of a drawbridge/door. The full command is now "/NewDoor [-p] <DoorName>".
- Fixed redstone signals on top of power blocks not triggering the power block.

Alpha 0.1.5.1
- Fixed NPE thrown when attempting to open a door on fresh installs. Note that if you got this error, you will need to regenerate your database! Thanks @antiPerson for your report!

Alpha 0.1.5