@@ -2,7 +2,7 @@
   	<modelVersion>4.0.0</modelVersion>
   	<groupId>nl.pim16aap2</groupId>
   	<artifactId>BigDoors</artifactId>
-  	<version>0.1.6-ALPHA</version>
+  	<version>0.1.6.1-ALPHA</version>
 	
 	<repositories>
 		<!-- Spigot -->
