@@ -2,14 +2,17 @@ Alpha 0.1.6
 - New animation algorithms! Prettier, much less error-prone, smaller, and ~30% faster!
 - Added support for custom sounds via a resource pack. Thank you @Achaius for all your help with this!
 - Added config options for resource pack loading.
-- Speed variable (now time) in the API now describes amount of time (measured in seconds) it will take to open a door of any type. 
+- Added portcullis/drawbridge/door speed multiplier variables in the config.
+- Speed variable (now called time) in the API now describes amount of time (measured in seconds) it will take to open a door of any type. 
 - Now using variable tickrate based on door speed and size! Faster = higher tickrate, slower = lower tickrate. 
 - Fixed materials such as andesite turning into stone in < 1.12. (again... Thank you, 1.13).
 - Added "/bdversion" command to display the version of this plugin.
 - Double steps no longer allowed for now, as they bug out everything.
 - Added support for using "/ListDoors <DoorName || PlayerName || PlayerUUID>" from console.
 - Added support for using "/DoorInfo <DoorUID>" from console.
-- Fixed NPE thrown when using changepowerblockloc using a name that has more than 1 or 0 result(s).
+- Fixed NPE thrown when using "/ChangePowerBlockLoc" using a name that has more than 1 or 0 result(s).
+- Anvils now rotate when used in a door.
+- Blacklisted cobblestone walls, as they don't behave properly.
 
 Alpha 0.1.5.4
 - Fixed GUI in 1.13.x, thank you @Achaius for the bug report!
